# prisma-monitor

./: .gitignore  Cargo.toml  README.md
docs/: PRISMA_DATA_FORMAT.md
src/: archive.rs  config.rs  events.rs  lib.rs  main.rs  mappings.rs  stats.rs
src/web/: mod.rs  routes.rs  templates.rs
static/: style.css
templates/: base.html  config.html  dashboard.html  session_detail.html  sessions.html  upload.html
