[package]
name = "prisma-monitor"
version = "0.1.0"
edition = "2024"
description = "Web-based therapy data monitor for Lowenstein Prisma CPAP/BiPAP devices"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
askama = "0.13"
tower-http = { version = "0.6", features = ["fs"] }
zip = "2"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
